# pose_receive

./: CMakeLists.txt  README.md  main11.cpp  main_smooth.cpp
include/: controlcan.h  robot.h
src/: main.cpp  robot.cpp  test.cpp
